--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=51092
+
+kafka.topic=topic5
+kafka.group=sule-consumer
+kafka.partition.size=5
+kafka.url=192.168.203.25:9092
+kafka.partition.id=1
+
+spring.kafka.auto-offset-reset=latest
+spring.kafka.bootstrap-servers=192.168.203.25:9092
+spring.kafka.consumer.group-id=sule-consumer
